# image-to-bookkeep-log-utility

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  GLOSSARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRD.md  PUBLICATION_READY.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
config/: rules.yaml  sheets.yaml  vendors.yaml
docs/: GOOGLE_SHEETS_SETUP.md  NO_TEST_USERS_SECTION.md  TROUBLESHOOTING_403_ERROR.md
examples/: example_usage.sh
examples/inbox/: IMG_7543 (1).HEIC  README.md
src/itbl/: __init__.py  cli.py
src/itbl/ingest/: __init__.py  loader.py  preprocess.py
src/itbl/normalize/: __init__.py  dedupe.py  schemas.py  validate.py
src/itbl/ocr/: __init__.py  base.py  tesseract.py
src/itbl/output/: __init__.py  csv_writer.py  gsheet_writer.py  writer_base.py  xlsx_writer.py
src/itbl/parse/: __init__.py  classify.py  common.py  extractors.py
src/itbl/parse/categories/: __init__.py  bank_statements.py  checks.py
src/itbl/review/: __init__.py  report.py  triage.py
src/itbl/util/: config.py  hashing.py  logging.py
tests/: __init__.py
tests/fixtures/: README.md
tests/integration/: test_pipeline.py
tests/unit/: test_extractors.py
